1) Variable charges layout issue fixes. 2) Whole gallery layout responsive issue fixed.

--- a/EventCombo/Content/AMaterial/main.css
+++ b/EventCombo/Content/AMaterial/main.css
@@ -36,7 +36,23 @@
 
 @media (min-width: 541px) and (max-width: 768px)
 {
-    
+      .wholegallery
+       {
+           margin-right: 30px;
+           margin-top: 15px;
+       }
+     
+       .responsiveFilter
+       {
+           display: block !important;
+           margin-top: 10px;
+           margin-right: 30px;
+           margin-bottom: 10px;
+       }
+       .defaultFilter
+       {
+           display: none !important;
+       }
     .OrganizerBody
     {
         padding-left: 26px !important;
@@ -79,6 +95,35 @@
 }
 @media (max-width: 540px) and (min-width: 400px)
 {
+ 
+      .wholegallery
+       {
+           margin-right: 30px;
+           margin-top: 15px;
+       }
+        .responsiveFilter
+       {
+           display: block !important;
+           margin-top: 10px;
+           margin-right: 30px;
+           margin-bottom: 10px;
+       }
+       .defaultFilter
+       {
+           display: none !important;
+       }
+       .btnSaveHeadCE
+    {
+        font-size: 11px !important;
+    }
+    .btnPreviewHeadCE
+    {
+        font-size: 11px !important;
+    }
+    .btnMakeLiveHeadCE
+    {
+        font-size: 11px !important;
+    }
       .variableClass
     {
         display: block !important;
@@ -137,6 +182,35 @@ color-picker-wrapper .color-picker-panel.color-picker-panel-left {
 
 }
 @media (max-width: 399px){
+      .wholegallery
+       {
+           margin-right: 30px;
+           margin-top: 15px;
+       }  
+     .responsiveFilter
+       {
+           display: block !important;
+           margin-top: 10px;
+           margin-right: 30px;
+           margin-bottom: 10px;
+       }
+       .defaultFilter
+       {
+           display: none !important;
+       }
+    
+     .btnSaveHeadCE
+    {
+        font-size: 9px !important;
+    }
+    .btnPreviewHeadCE
+    {
+        font-size: 9px !important;
+    }
+    .btnMakeLiveHeadCE
+    {
+        font-size: 9px !important;
+    }
     .variableClass
     {
         display: block !important;
@@ -208,6 +282,7 @@ color-picker-wrapper .color-picker-panel.color-picker-panel-left {
         padding: 10px 0px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     margin-bottom: 20px;
+    margin-right: 15px;
 }
 .ticketButtonDiv
 {
